--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+black==24.8.0
 cfgv==3.4.0
+click==8.1.7
 distlib==0.3.8
 filelock==3.15.4
 identify==2.6.0
@@ -7,6 +9,7 @@ mypy==1.11.2
 mypy-extensions==1.0.0
 nodeenv==1.9.1
 packaging==24.1
+pathspec==0.12.1
 platformdirs==4.2.2
 pluggy==1.5.0
 pre-commit==3.8.0
