--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.9'
 
 services:
   app:
-    image: python/3.12-slim
+    build:
+        context: .
+        dockerfile: Dockerfile
     tty: true
     volumes:
       - $PWD:/app
